--- a/css/style.css
+++ b/css/style.css
@@ -285,8 +285,11 @@ button.success,
 /* line 96, ../sass/partials/_utility.scss */
 .background-platinum,
 .background-subtle,
-::selection,
-::-moz-selection {
+hr,
+.button-group button.white:hover,
+.button-group button.white:focus,
+.button-group .button.white:hover,
+.button-group .button.white:focus {
   background: #e7e7e7;
 }
 
@@ -385,44 +388,49 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 21, ../sass/partials/_type.scss */
+/* line 13, ../sass/partials/_type.scss */
+::selection, ::-moz-selection {
+  background: #e7e7e7;
+}
+
+/* line 17, ../sass/partials/_type.scss */
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.25em;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: bold;
+  font-weight: normal;
 }
 
-/* line 30, ../sass/partials/_type.scss */
+/* line 26, ../sass/partials/_type.scss */
 h1 {
   font-size: 2.75rem;
 }
 
-/* line 31, ../sass/partials/_type.scss */
+/* line 27, ../sass/partials/_type.scss */
 h2 {
   font-size: 2.313rem;
 }
 
-/* line 32, ../sass/partials/_type.scss */
+/* line 28, ../sass/partials/_type.scss */
 h3 {
   font-size: 1.688rem;
 }
 
-/* line 33, ../sass/partials/_type.scss */
+/* line 29, ../sass/partials/_type.scss */
 h4 {
   font-size: 1.438rem;
 }
 
-/* line 34, ../sass/partials/_type.scss */
+/* line 30, ../sass/partials/_type.scss */
 h5 {
   font-size: 1.125rem;
 }
 
-/* line 35, ../sass/partials/_type.scss */
+/* line 31, ../sass/partials/_type.scss */
 h6 {
   font-size: 1rem;
 }
 
-/* line 37, ../sass/partials/_type.scss */
+/* line 33, ../sass/partials/_type.scss */
 p {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
@@ -430,46 +438,45 @@ p {
   line-height: 23px;
 }
 
-/* line 48, ../sass/partials/_type.scss */
+/* line 44, ../sass/partials/_type.scss */
 hr {
-  background: #e7e7e7;
   height: 1px;
   border: none;
 }
 
-/* line 58, ../sass/partials/_type.scss */
+/* line 54, ../sass/partials/_type.scss */
 small, figcaption, caption, .small, .figcaption, .caption {
   font-size: 0.75em;
   font-weight: 400;
 }
 
-/* line 64, ../sass/partials/_type.scss */
+/* line 60, ../sass/partials/_type.scss */
 strong, b, .strong, .bold {
   font-weight: bold;
 }
 
-/* line 67, ../sass/partials/_type.scss */
+/* line 63, ../sass/partials/_type.scss */
 em, .em {
   font-style: italic;
 }
 
 @media only screen and (min-width: 40.063em) {
-  /* line 70, ../sass/partials/_type.scss */
+  /* line 66, ../sass/partials/_type.scss */
   h1 {
     font-size: 2.125rem;
   }
 
-  /* line 71, ../sass/partials/_type.scss */
+  /* line 67, ../sass/partials/_type.scss */
   h2 {
     font-size: 1.688rem;
   }
 
-  /* line 72, ../sass/partials/_type.scss */
+  /* line 68, ../sass/partials/_type.scss */
   h3 {
     font-size: 1.375rem;
   }
 
-  /* line 73, ../sass/partials/_type.scss */
+  /* line 69, ../sass/partials/_type.scss */
   h4 {
     font-size: 1.125rem;
   }
@@ -2743,42 +2750,79 @@ button, .button {
   -moz-transition: background, 0.2s;
   -o-transition: background, 0.2s;
   transition: background, 0.2s;
+  cursor: pointer;
 }
-/* line 22, ../sass/partials/_atoms.scss */
+/* line 23, ../sass/partials/_atoms.scss */
 button.tiny, .button.tiny {
   font-size: 80%;
 }
-/* line 34, ../sass/partials/_atoms.scss */
+/* line 35, ../sass/partials/_atoms.scss */
 button:hover, button:focus, .button:hover, .button:focus {
   background: #148ad2;
 }
-/* line 41, ../sass/partials/_atoms.scss */
+/* line 42, ../sass/partials/_atoms.scss */
 button.error:hover, button.error:focus, .button.error:hover, .button.error:focus {
   background: #e9334a;
 }
-/* line 46, ../sass/partials/_atoms.scss */
+/* line 47, ../sass/partials/_atoms.scss */
 button.warning:hover, button.warning:focus, .button.warning:hover, .button.warning:focus {
   background: #ff8a26;
 }
-/* line 51, ../sass/partials/_atoms.scss */
+/* line 52, ../sass/partials/_atoms.scss */
 button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
   background: #bec61e;
 }
-/* line 56, ../sass/partials/_atoms.scss */
+/* line 57, ../sass/partials/_atoms.scss */
 button.neutral:hover, button.neutral:focus, .button.neutral:hover, .button.neutral:focus {
   background: #474747;
 }
-/* line 59, ../sass/partials/_atoms.scss */
+/* line 60, ../sass/partials/_atoms.scss */
 button.disabled, .button.disabled {
   cursor: default;
 }
-/* line 65, ../sass/partials/_atoms.scss */
+/* line 66, ../sass/partials/_atoms.scss */
 button.white, .button.white {
   border: 1px solid #aaaaaa;
 }
-/* line 69, ../sass/partials/_atoms.scss */
+/* line 70, ../sass/partials/_atoms.scss */
 button.white:hover, button.white:focus, .button.white:hover, .button.white:focus {
   border: 1px solid #333333;
+}
+
+/* line 84, ../sass/partials/_atoms.scss */
+.button-group {
+  padding: 10px 0;
+}
+/* line 86, ../sass/partials/_atoms.scss */
+.button-group button, .button-group .button {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  margin-right: -6px;
+}
+/* line 89, ../sass/partials/_atoms.scss */
+.button-group button:first-child, .button-group .button:first-child {
+  -moz-border-radius-topleft: 3px;
+  -webkit-border-top-left-radius: 3px;
+  border-top-left-radius: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+/* line 90, ../sass/partials/_atoms.scss */
+.button-group button:last-child, .button-group .button:last-child {
+  -moz-border-radius-topright: 3px;
+  -webkit-border-top-right-radius: 3px;
+  border-top-right-radius: 3px;
+  -moz-border-radius-bottomright: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+/* line 91, ../sass/partials/_atoms.scss */
+.button-group button.white:hover, .button-group button.white:focus, .button-group .button.white:hover, .button-group .button.white:focus {
+  border-color: #aaaaaa;
 }
 
 /* line 3, ../sass/partials/_base.scss */
