Added dropdowns, search bar, content box and sample cards

--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,17 @@
 }
 
 /* line 7, ../sass/partials/_utility.scss */
-.text-right {
+.text-right, .table-data .data-set .label {
   text-align: right;
 }
 
 /* line 9, ../sass/partials/_utility.scss */
-.float-left {
+.float-left, .card {
   float: left;
 }
 
 /* line 10, ../sass/partials/_utility.scss */
-.float-right {
+.float-right, .search-bar .search-field .dropdown {
   float: right;
 }
 
@@ -34,7 +34,7 @@
 }
 
 /* line 15, ../sass/partials/_utility.scss */
-.valign-middle, img {
+.valign-middle, img, .search-bar .search-field > * {
   vertical-align: middle;
 }
 
@@ -49,27 +49,27 @@
 }
 
 /* line 25, ../sass/partials/_utility.scss */
-.display-inline-block, button, .button {
+.display-inline-block, button, .button, .dropdown, .search-bar .search-field > * {
   display: inline-block;
 }
 
 /* line 26, ../sass/partials/_utility.scss */
-.display-block, button.full, .button.full {
+.display-block, button.full, .button.full, .dropdown-menu a, .card-body.item .item-details > * {
   display: block;
 }
 
 /* line 27, ../sass/partials/_utility.scss */
-.display-table {
+.display-table, .table-data {
   display: table;
 }
 
 /* line 28, ../sass/partials/_utility.scss */
-.display-table-row {
+.display-table-row, .table-data .data-set {
   display: table-row;
 }
 
 /* line 29, ../sass/partials/_utility.scss */
-.display-table-cell {
+.display-table-cell, .table-data .data-set > * {
   display: table-cell;
 }
 
@@ -89,7 +89,7 @@
 }
 
 /* line 40, ../sass/partials/_utility.scss */
-.margin-10 {
+.margin-10, .card {
   margin: 10px;
 }
 
@@ -114,7 +114,7 @@
 }
 
 /* line 45, ../sass/partials/_utility.scss */
-.margin-bottom-20, p, hr {
+.margin-bottom-20, p, hr, .card-body.item .item-name, .card-body.item .item-price {
   margin-bottom: 20px;
 }
 
@@ -169,12 +169,12 @@
 }
 
 /* line 57, ../sass/partials/_utility.scss */
-.padding-10, figcaption {
+.padding-10, .dropdown-menu a, input, textarea, select, figcaption, .card .card-header, .card .card-body, .card .card-actions, .search-bar {
   padding: 10px;
 }
 
 /* line 58, ../sass/partials/_utility.scss */
-.padding-5 {
+.padding-5, .table-data .data-set > * {
   padding: 5px;
 }
 
@@ -189,7 +189,7 @@
 }
 
 /* line 61, ../sass/partials/_utility.scss */
-.padding-top-5, button.small, .button.small {
+.padding-top-5, button.small, .button.small, .search-bar .search-field .dropdown {
   padding-top: 5px;
 }
 
@@ -238,12 +238,61 @@
   padding-right: 5px;
 }
 
-/* line 78, ../sass/partials/_utility.scss */
+/* line 79, ../sass/partials/_utility.scss */
+.border-platinum,
+.border-subtle,
+input,
+textarea,
+select {
+  border: 1px solid #e7e7e7;
+}
+
+/* line 82, ../sass/partials/_utility.scss */
+.border-darkgray,
+.border-neutral {
+  border: 1px solid #333333;
+}
+
+/* line 84, ../sass/partials/_utility.scss */
+.border-blue {
+  border: 1px solid #0076be;
+}
+
+/* line 87, ../sass/partials/_utility.scss */
+.border-error,
+.border-red {
+  border: 1px solid #d51f36;
+}
+
+/* line 90, ../sass/partials/_utility.scss */
+.border-warning,
+.border-orange {
+  border: 1px solid #ed7612;
+}
+
+/* line 92, ../sass/partials/_utility.scss */
+.border-purple {
+  border: 1px solid #86277f;
+}
+
+/* line 95, ../sass/partials/_utility.scss */
+.border-success,
+.border-green {
+  border: 1px solid #aab20a;
+}
+
+/* line 98, ../sass/partials/_utility.scss */
+.border-disabled,
+.border-ash {
+  border: 1px solid #aaaaaa;
+}
+
+/* line 105, ../sass/partials/_utility.scss */
 .background-blue, button, .button {
   background: #0076be;
 }
 
-/* line 81, ../sass/partials/_utility.scss */
+/* line 108, ../sass/partials/_utility.scss */
 .background-red,
 .background-error,
 button.error,
@@ -251,7 +300,7 @@ button.error,
   background: #d51f36;
 }
 
-/* line 84, ../sass/partials/_utility.scss */
+/* line 111, ../sass/partials/_utility.scss */
 .background-orange,
 .background-warning,
 button.warning,
@@ -259,41 +308,43 @@ button.warning,
   background: #ed7612;
 }
 
-/* line 87, ../sass/partials/_utility.scss */
-.background-green,
+/* line 114, ../sass/partials/_utility.scss */
+.background-green, .search-bar,
 .background-success,
 button.success,
 .button.success {
   background: #aab20a;
 }
 
-/* line 89, ../sass/partials/_utility.scss */
+/* line 116, ../sass/partials/_utility.scss */
 .background-yellow {
   background: #f2b520;
 }
 
-/* line 91, ../sass/partials/_utility.scss */
+/* line 118, ../sass/partials/_utility.scss */
 .background-purple {
   background: #86277f;
 }
 
-/* line 93, ../sass/partials/_utility.scss */
-.background-white, button.white, .button.white, button.white:hover, button.white:focus, .button.white:hover, .button.white:focus, html, body {
+/* line 120, ../sass/partials/_utility.scss */
+.background-white, button.white, .button.white, button.white:hover, button.white:focus, .button.white:hover, .button.white:focus, html, body, .search-bar .search-field {
   background: white;
 }
 
-/* line 96, ../sass/partials/_utility.scss */
+/* line 123, ../sass/partials/_utility.scss */
 .background-platinum,
 .background-subtle,
 hr,
 .button-group button.white:hover,
 .button-group button.white:focus,
 .button-group .button.white:hover,
-.button-group .button.white:focus {
+.button-group .button.white:focus,
+.dropdown-menu a:hover,
+.dropdown-menu a:focus {
   background: #e7e7e7;
 }
 
-/* line 99, ../sass/partials/_utility.scss */
+/* line 126, ../sass/partials/_utility.scss */
 .background-ash,
 .background-disabled,
 button.disabled,
@@ -301,65 +352,66 @@ button.disabled,
   background: #aaaaaa;
 }
 
-/* line 102, ../sass/partials/_utility.scss */
+/* line 129, ../sass/partials/_utility.scss */
 .background-darkgray,
 .background-neutral,
 button.neutral,
-.button.neutral {
+.button.neutral,
+.card .card-header {
   background: #333333;
 }
 
-/* line 110, ../sass/partials/_utility.scss */
+/* line 137, ../sass/partials/_utility.scss */
 .text-blue, a {
   color: #0076be;
 }
 
-/* line 113, ../sass/partials/_utility.scss */
-.text-red,
+/* line 140, ../sass/partials/_utility.scss */
+.text-red, .card-body.item .item-price,
 .text-error {
   color: #d51f36;
 }
 
-/* line 116, ../sass/partials/_utility.scss */
+/* line 143, ../sass/partials/_utility.scss */
 .text-orange,
 .text-warning {
   color: #ed7612;
 }
 
-/* line 119, ../sass/partials/_utility.scss */
+/* line 146, ../sass/partials/_utility.scss */
 .text-green,
 .text-success {
   color: #aab20a;
 }
 
-/* line 121, ../sass/partials/_utility.scss */
+/* line 148, ../sass/partials/_utility.scss */
 .text-yellow {
   color: #f2b520;
 }
 
-/* line 123, ../sass/partials/_utility.scss */
+/* line 150, ../sass/partials/_utility.scss */
 .text-purple {
   color: #86277f;
 }
 
-/* line 125, ../sass/partials/_utility.scss */
-.text-white, button, .button, button:hover, button:focus, .button:hover, .button:focus, a.white {
+/* line 152, ../sass/partials/_utility.scss */
+.text-white, button, .button, button:hover, button:focus, .button:hover, .button:focus, a.white, .card .card-header {
   color: white;
 }
 
-/* line 128, ../sass/partials/_utility.scss */
+/* line 155, ../sass/partials/_utility.scss */
 .text-platinum,
 .text-subtle {
   color: #e7e7e7;
 }
 
-/* line 131, ../sass/partials/_utility.scss */
-.text-ash,
+/* line 158, ../sass/partials/_utility.scss */
+.text-ash, .card-body.item .item-details, .table-data .data-set .label,
 .text-disabled {
   color: #aaaaaa;
 }
 
-/* line 134, ../sass/partials/_utility.scss */
+/* line 161, ../sass/partials/_utility.scss */
 .text-darkgray,
 .text-neutral,
 body,
@@ -376,6 +428,21 @@ button.white:focus,
 .button.white:hover,
 .button.white:focus {
   color: #333333;
+}
+
+/* line 169, ../sass/partials/_utility.scss */
+.overflow-hidden, .card {
+  overflow: hidden;
+}
+
+/* line 170, ../sass/partials/_utility.scss */
+.overflow-scroll-x {
+  overflow-x: scroll;
+}
+
+/* line 171, ../sass/partials/_utility.scss */
+.overflow-scroll-y {
+  overflow-y: scroll;
 }
 
 /* line 3, ../sass/partials/_type.scss */
@@ -444,39 +511,39 @@ hr {
   border: none;
 }
 
-/* line 54, ../sass/partials/_type.scss */
+/* line 55, ../sass/partials/_type.scss */
 small, figcaption, caption, .small, .figcaption, .caption {
   font-size: 0.75em;
   font-weight: 400;
 }
 
-/* line 60, ../sass/partials/_type.scss */
+/* line 61, ../sass/partials/_type.scss */
 strong, b, .strong, .bold {
   font-weight: bold;
 }
 
-/* line 63, ../sass/partials/_type.scss */
+/* line 64, ../sass/partials/_type.scss */
 em, .em {
   font-style: italic;
 }
 
 @media only screen and (min-width: 40.063em) {
-  /* line 66, ../sass/partials/_type.scss */
+  /* line 67, ../sass/partials/_type.scss */
   h1 {
     font-size: 2.125rem;
   }
 
-  /* line 67, ../sass/partials/_type.scss */
+  /* line 68, ../sass/partials/_type.scss */
   h2 {
     font-size: 1.688rem;
   }
 
-  /* line 68, ../sass/partials/_type.scss */
+  /* line 69, ../sass/partials/_type.scss */
   h3 {
     font-size: 1.375rem;
   }
 
-  /* line 69, ../sass/partials/_type.scss */
+  /* line 70, ../sass/partials/_type.scss */
   h4 {
     font-size: 1.125rem;
   }
@@ -577,13 +644,13 @@ img {
 }
 
 /* line 64, ../sass/partials/_grid.scss */
-.clearfix:before, .clearfix:after {
+.clearfix:before, hr:before, .clearfix:after, hr:after {
   content: " ";
   display: table;
 }
 
 /* line 67, ../sass/partials/_grid.scss */
-.clearfix:after {
+.clearfix:after, hr:after {
   clear: both;
 }
 
@@ -2825,6 +2892,141 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   border-color: #aaaaaa;
 }
 
+/* line 104, ../sass/partials/_atoms.scss */
+.dropdown {
+  position: relative;
+}
+
+/* line 109, ../sass/partials/_atoms.scss */
+.dropdown-menu {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 3;
+  float: left;
+  list-style: none;
+  margin: 2px 0;
+  padding: 0;
+  background: white;
+  border: 1px solid #e7e7e7;
+  min-width: 140px;
+  text-align: left;
+}
+/* line 124, ../sass/partials/_atoms.scss */
+.dropdown-menu a {
+  border-bottom: 1px solid #e7e7e7;
+}
+/* line 131, ../sass/partials/_atoms.scss */
+.dropdown-menu a.active {
+  font-weight: bold;
+}
+/* line 133, ../sass/partials/_atoms.scss */
+.dropdown-menu.small a {
+  font-size: 0.8rem;
+}
+
+/* line 5, ../sass/partials/_forms.scss */
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  min-width: 0;
+}
+
+/* line 14, ../sass/partials/_forms.scss */
+legend {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 23px;
+  font-size: 24px;
+  line-height: inherit;
+  color: #aaaaaa;
+  border: 0;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+/* line 26, ../sass/partials/_forms.scss */
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+/* line 34, ../sass/partials/_forms.scss */
+input[type="search"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 40, ../sass/partials/_forms.scss */
+input[type="radio"],
+input[type="checkbox"] {
+  margin: 4px 0 0;
+  margin-top: 1px \9;
+  line-height: normal;
+}
+
+/* line 47, ../sass/partials/_forms.scss */
+input[type="file"] {
+  display: block;
+}
+
+/* line 52, ../sass/partials/_forms.scss */
+input[type="range"] {
+  display: block;
+  width: 100%;
+}
+
+/* line 59, ../sass/partials/_forms.scss */
+select[multiple],
+select[size] {
+  height: auto;
+}
+
+/* line 66, ../sass/partials/_forms.scss */
+input[type="file"]:focus,
+input[type="radio"]:focus,
+input[type="checkbox"]:focus {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+/* line 74, ../sass/partials/_forms.scss */
+output {
+  display: block;
+  padding-top: 11px;
+  font-size: 16px;
+  line-height: 23px;
+  color: #333333;
+}
+
+/* line 88, ../sass/partials/_forms.scss */
+input, textarea, select {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+/* line 93, ../sass/partials/_forms.scss */
+input:focus, textarea:focus, select:focus {
+  -webkit-box-shadow: 0px 0px 7px #aab20a;
+  -moz-box-shadow: 0px 0px 7px #aab20a;
+  box-shadow: 0px 0px 7px #aab20a;
+  outline: none;
+}
+
 /* line 3, ../sass/partials/_base.scss */
 * {
   -webkit-box-sizing: border-box;
@@ -2854,4 +3056,55 @@ p {
 table {
   width: 100%;
   border-collapse: collapse;
+}
+
+/* line 5, ../sass/partials/_molecules.scss */
+.card {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  border: 1px solid #e7e7e7;
+}
+
+/* line 24, ../sass/partials/_molecules.scss */
+.card-body.item .item-details {
+  border-top: 1px solid #e7e7e7;
+}
+
+/* line 39, ../sass/partials/_molecules.scss */
+.table-data .data-set .label {
+  font-size: 0.8em;
+}
+
+/* line 51, ../sass/partials/_molecules.scss */
+.search-bar {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+/* line 55, ../sass/partials/_molecules.scss */
+.search-bar input {
+  border: none;
+  font-size: 1.25em;
+  width: 75%;
+}
+/* line 59, ../sass/partials/_molecules.scss */
+.search-bar input:focus {
+  box-shadow: none;
+}
+/* line 61, ../sass/partials/_molecules.scss */
+.search-bar .search-field {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+/* line 68, ../sass/partials/_molecules.scss */
+.search-bar .search-field .dropdown {
+  margin-right: -10px;
 }
