--- a/sass/partials/_atoms.scss
+++ b/sass/partials/_atoms.scss
@@ -94,3 +94,48 @@ button, .button {
 		}
 	}
 }
+
+
+
+
+
+// Dropdowns
+
+.dropdown {
+	@extend .display-inline-block;
+	position: relative;
+}
+
+.dropdown-menu {
+	@include border-radius(3px);
+	display: none;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	z-index: 3;
+	float: left;
+	list-style: none;
+	margin: 2px 0;
+	padding: 0;
+	background: $white;
+	border: 1px solid $subtle;
+	min-width: 140px;
+	text-align: left;
+	a {
+		@extend .display-block;
+		@extend .padding-10;
+		border-bottom: 1px solid $subtle;
+		&:hover, &:focus {
+			@extend .background-subtle;
+		}
+		&.active { font-weight: bold; }
+	}
+	&.small a { font-size: 0.8rem; }
+}
+
+
+
+
+
+
+
