--- a/sass/partials/_type.scss
+++ b/sass/partials/_type.scss
@@ -46,6 +46,7 @@
 		@extend .margin-top-20;
 		@extend .margin-bottom-20;
 		@extend .background-subtle;
+		@extend .clearfix;
 		height: 1px;
 		border: none;
 	}
