Placeholders for to do items

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@
   padding-right: 5px;
 }
 
-/* line 79, ../sass/partials/_utility.scss */
+/* line 78, ../sass/partials/_utility.scss */
 .border-platinum,
 .border-subtle,
 input,
@@ -247,7 +247,7 @@ select {
   border: 1px solid #e7e7e7;
 }
 
-/* line 82, ../sass/partials/_utility.scss */
+/* line 81, ../sass/partials/_utility.scss */
 .border-darkgray,
 .border-neutral {
   border: 1px solid #333333;
@@ -258,13 +258,13 @@ select {
   border: 1px solid #0076be;
 }
 
-/* line 87, ../sass/partials/_utility.scss */
+/* line 86, ../sass/partials/_utility.scss */
 .border-error,
 .border-red {
   border: 1px solid #d51f36;
 }
 
-/* line 90, ../sass/partials/_utility.scss */
+/* line 89, ../sass/partials/_utility.scss */
 .border-warning,
 .border-orange {
   border: 1px solid #ed7612;
@@ -275,24 +275,24 @@ select {
   border: 1px solid #86277f;
 }
 
-/* line 95, ../sass/partials/_utility.scss */
+/* line 94, ../sass/partials/_utility.scss */
 .border-success,
 .border-green {
   border: 1px solid #aab20a;
 }
 
-/* line 98, ../sass/partials/_utility.scss */
+/* line 97, ../sass/partials/_utility.scss */
 .border-disabled,
 .border-ash {
-  border: 1px solid #aaaaaa;
+  border: 1px solid #aaa;
 }
 
 /* line 105, ../sass/partials/_utility.scss */
-.background-blue, button, .button {
+.background-blue, button, .button, .search-bar {
   background: #0076be;
 }
 
-/* line 108, ../sass/partials/_utility.scss */
+/* line 107, ../sass/partials/_utility.scss */
 .background-red,
 .background-error,
 button.error,
@@ -300,7 +300,7 @@ button.error,
   background: #d51f36;
 }
 
-/* line 111, ../sass/partials/_utility.scss */
+/* line 110, ../sass/partials/_utility.scss */
 .background-orange,
 .background-warning,
 button.warning,
@@ -308,8 +308,8 @@ button.warning,
   background: #ed7612;
 }
 
-/* line 114, ../sass/partials/_utility.scss */
-.background-green, .search-bar,
+/* line 113, ../sass/partials/_utility.scss */
+.background-green,
 .background-success,
 button.success,
 .button.success {
@@ -328,10 +328,10 @@ button.success,
 
 /* line 120, ../sass/partials/_utility.scss */
 .background-white, button.white, .button.white, button.white:hover, button.white:focus, .button.white:hover, .button.white:focus, html, body, .search-bar .search-field {
-  background: white;
+  background: #fff;
 }
 
-/* line 123, ../sass/partials/_utility.scss */
+/* line 122, ../sass/partials/_utility.scss */
 .background-platinum,
 .background-subtle,
 hr,
@@ -344,15 +344,15 @@ hr,
   background: #e7e7e7;
 }
 
-/* line 126, ../sass/partials/_utility.scss */
+/* line 125, ../sass/partials/_utility.scss */
 .background-ash,
 .background-disabled,
 button.disabled,
 .button.disabled {
-  background: #aaaaaa;
+  background: #aaa;
 }
 
-/* line 129, ../sass/partials/_utility.scss */
+/* line 128, ../sass/partials/_utility.scss */
 .background-darkgray,
 .background-neutral,
 button.neutral,
@@ -366,19 +366,19 @@ button.neutral,
   color: #0076be;
 }
 
-/* line 140, ../sass/partials/_utility.scss */
+/* line 139, ../sass/partials/_utility.scss */
 .text-red, .card-body.item .item-price,
 .text-error {
   color: #d51f36;
 }
 
-/* line 143, ../sass/partials/_utility.scss */
+/* line 142, ../sass/partials/_utility.scss */
 .text-orange,
 .text-warning {
   color: #ed7612;
 }
 
-/* line 146, ../sass/partials/_utility.scss */
+/* line 145, ../sass/partials/_utility.scss */
 .text-green,
 .text-success {
   color: #aab20a;
@@ -396,22 +396,22 @@ button.neutral,
 
 /* line 152, ../sass/partials/_utility.scss */
 .text-white, button, .button, button:hover, button:focus, .button:hover, .button:focus, a.white, .card .card-header {
-  color: white;
+  color: #fff;
 }
 
-/* line 155, ../sass/partials/_utility.scss */
+/* line 154, ../sass/partials/_utility.scss */
 .text-platinum,
 .text-subtle {
   color: #e7e7e7;
 }
 
-/* line 158, ../sass/partials/_utility.scss */
+/* line 157, ../sass/partials/_utility.scss */
 .text-ash, .card-body.item .item-details, .table-data .data-set .label,
 .text-disabled {
-  color: #aaaaaa;
+  color: #aaa;
 }
 
-/* line 161, ../sass/partials/_utility.scss */
+/* line 160, ../sass/partials/_utility.scss */
 .text-darkgray,
 .text-neutral,
 body,
@@ -623,7 +623,7 @@ img {
   -ms-interpolation-mode: bicubic;
 }
 
-/* line 55, ../sass/partials/_grid.scss */
+/* line 50, ../sass/partials/_grid.scss */
 #map_canvas img,
 #map_canvas embed,
 #map_canvas object,
@@ -708,7 +708,7 @@ select {
   clear: both;
 }
 
-/* line 104, ../sass/partials/_grid.scss */
+/* line 103, ../sass/partials/_grid.scss */
 .row.collapse > .column,
 .row.collapse > .columns {
   padding-left: 0;
@@ -760,7 +760,7 @@ select {
   clear: both;
 }
 
-/* line 133, ../sass/partials/_grid.scss */
+/* line 132, ../sass/partials/_grid.scss */
 .column,
 .columns {
   padding-left: 0.9375em;
@@ -948,7 +948,7 @@ select {
     left: auto;
   }
 
-  /* line 267, ../sass/partials/_grid.scss */
+  /* line 266, ../sass/partials/_grid.scss */
   .column,
   .columns {
     position: relative;
@@ -1086,7 +1086,7 @@ select {
     float: left;
   }
 
-  /* line 353, ../sass/partials/_grid.scss */
+  /* line 352, ../sass/partials/_grid.scss */
   .column.small-centered,
   .columns.small-centered {
     margin-left: auto;
@@ -1094,7 +1094,7 @@ select {
     float: none;
   }
 
-  /* line 359, ../sass/partials/_grid.scss */
+  /* line 358, ../sass/partials/_grid.scss */
   .column.small-uncentered,
   .columns.small-uncentered {
     margin-left: 0;
@@ -1102,25 +1102,25 @@ select {
     float: left;
   }
 
-  /* line 365, ../sass/partials/_grid.scss */
+  /* line 364, ../sass/partials/_grid.scss */
   .column.small-centered:last-child,
   .columns.small-centered:last-child {
     float: none;
   }
 
-  /* line 369, ../sass/partials/_grid.scss */
+  /* line 368, ../sass/partials/_grid.scss */
   .column.small-uncentered:last-child,
   .columns.small-uncentered:last-child {
     float: left;
   }
 
-  /* line 373, ../sass/partials/_grid.scss */
+  /* line 372, ../sass/partials/_grid.scss */
   .column.small-uncentered.opposite,
   .columns.small-uncentered.opposite {
     float: right;
   }
 
-  /* line 377, ../sass/partials/_grid.scss */
+  /* line 376, ../sass/partials/_grid.scss */
   .row.small-collapse > .column,
   .row.small-collapse > .columns {
     padding-left: 0;
@@ -1133,7 +1133,7 @@ select {
     margin-right: 0;
   }
 
-  /* line 384, ../sass/partials/_grid.scss */
+  /* line 383, ../sass/partials/_grid.scss */
   .row.small-uncollapse > .column,
   .row.small-uncollapse > .columns {
     padding-left: 0.9375em;
@@ -1310,7 +1310,7 @@ select {
     left: auto;
   }
 
-  /* line 510, ../sass/partials/_grid.scss */
+  /* line 509, ../sass/partials/_grid.scss */
   .column,
   .columns {
     position: relative;
@@ -1448,7 +1448,7 @@ select {
     float: left;
   }
 
-  /* line 596, ../sass/partials/_grid.scss */
+  /* line 595, ../sass/partials/_grid.scss */
   .column.medium-centered,
   .columns.medium-centered {
     margin-left: auto;
@@ -1456,7 +1456,7 @@ select {
     float: none;
   }
 
-  /* line 602, ../sass/partials/_grid.scss */
+  /* line 601, ../sass/partials/_grid.scss */
   .column.medium-uncentered,
   .columns.medium-uncentered {
     margin-left: 0;
@@ -1464,25 +1464,25 @@ select {
     float: left;
   }
 
-  /* line 608, ../sass/partials/_grid.scss */
+  /* line 607, ../sass/partials/_grid.scss */
   .column.medium-centered:last-child,
   .columns.medium-centered:last-child {
     float: none;
   }
 
-  /* line 612, ../sass/partials/_grid.scss */
+  /* line 611, ../sass/partials/_grid.scss */
   .column.medium-uncentered:last-child,
   .columns.medium-uncentered:last-child {
     float: left;
   }
 
-  /* line 616, ../sass/partials/_grid.scss */
+  /* line 615, ../sass/partials/_grid.scss */
   .column.medium-uncentered.opposite,
   .columns.medium-uncentered.opposite {
     float: right;
   }
 
-  /* line 620, ../sass/partials/_grid.scss */
+  /* line 619, ../sass/partials/_grid.scss */
   .row.medium-collapse > .column,
   .row.medium-collapse > .columns {
     padding-left: 0;
@@ -1495,7 +1495,7 @@ select {
     margin-right: 0;
   }
 
-  /* line 627, ../sass/partials/_grid.scss */
+  /* line 626, ../sass/partials/_grid.scss */
   .row.medium-uncollapse > .column,
   .row.medium-uncollapse > .columns {
     padding-left: 0.9375em;
@@ -1840,7 +1840,7 @@ select {
     left: auto;
   }
 
-  /* line 873, ../sass/partials/_grid.scss */
+  /* line 872, ../sass/partials/_grid.scss */
   .column,
   .columns {
     position: relative;
@@ -1978,7 +1978,7 @@ select {
     float: left;
   }
 
-  /* line 959, ../sass/partials/_grid.scss */
+  /* line 958, ../sass/partials/_grid.scss */
   .column.large-centered,
   .columns.large-centered {
     margin-left: auto;
@@ -1986,7 +1986,7 @@ select {
     float: none;
   }
 
-  /* line 965, ../sass/partials/_grid.scss */
+  /* line 964, ../sass/partials/_grid.scss */
   .column.large-uncentered,
   .columns.large-uncentered {
     margin-left: 0;
@@ -1994,25 +1994,25 @@ select {
     float: left;
   }
 
-  /* line 971, ../sass/partials/_grid.scss */
+  /* line 970, ../sass/partials/_grid.scss */
   .column.large-centered:last-child,
   .columns.large-centered:last-child {
     float: none;
   }
 
-  /* line 975, ../sass/partials/_grid.scss */
+  /* line 974, ../sass/partials/_grid.scss */
   .column.large-uncentered:last-child,
   .columns.large-uncentered:last-child {
     float: left;
   }
 
-  /* line 979, ../sass/partials/_grid.scss */
+  /* line 978, ../sass/partials/_grid.scss */
   .column.large-uncentered.opposite,
   .columns.large-uncentered.opposite {
     float: right;
   }
 
-  /* line 983, ../sass/partials/_grid.scss */
+  /* line 982, ../sass/partials/_grid.scss */
   .row.large-collapse > .column,
   .row.large-collapse > .columns {
     padding-left: 0;
@@ -2025,7 +2025,7 @@ select {
     margin-right: 0;
   }
 
-  /* line 990, ../sass/partials/_grid.scss */
+  /* line 989, ../sass/partials/_grid.scss */
   .row.large-uncollapse > .column,
   .row.large-uncollapse > .columns {
     padding-left: 0.9375em;
@@ -2808,14 +2808,12 @@ select {
 }
 /* line 4, ../sass/partials/_atoms.scss */
 button, .button {
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
-  -webkit-transition: background, 0.2s;
   -moz-transition: background, 0.2s;
   -o-transition: background, 0.2s;
+  -webkit-transition: background, 0.2s;
   transition: background, 0.2s;
   cursor: pointer;
 }
@@ -2849,7 +2847,7 @@ button.disabled, .button.disabled {
 }
 /* line 66, ../sass/partials/_atoms.scss */
 button.white, .button.white {
-  border: 1px solid #aaaaaa;
+  border: 1px solid #aaa;
 }
 /* line 70, ../sass/partials/_atoms.scss */
 button.white:hover, button.white:focus, .button.white:hover, .button.white:focus {
@@ -2862,10 +2860,8 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
 }
 /* line 86, ../sass/partials/_atoms.scss */
 .button-group button, .button-group .button {
-  -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
+  -webkit-border-radius: 0;
   border-radius: 0;
   margin-right: -6px;
 }
@@ -2889,7 +2885,7 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
 }
 /* line 91, ../sass/partials/_atoms.scss */
 .button-group button.white:hover, .button-group button.white:focus, .button-group .button.white:hover, .button-group .button.white:focus {
-  border-color: #aaaaaa;
+  border-color: #aaa;
 }
 
 /* line 104, ../sass/partials/_atoms.scss */
@@ -2899,10 +2895,8 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
 
 /* line 109, ../sass/partials/_atoms.scss */
 .dropdown-menu {
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   display: none;
   position: absolute;
@@ -2913,7 +2907,7 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   list-style: none;
   margin: 2px 0;
   padding: 0;
-  background: white;
+  background: #fff;
   border: 1px solid #e7e7e7;
   min-width: 140px;
   text-align: left;
@@ -2947,7 +2941,7 @@ legend {
   margin-bottom: 23px;
   font-size: 24px;
   line-height: inherit;
-  color: #aaaaaa;
+  color: #aaa;
   border: 0;
   border-bottom: 1px solid #e7e7e7;
 }
@@ -2962,12 +2956,12 @@ label {
 
 /* line 34, ../sass/partials/_forms.scss */
 input[type="search"] {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 40, ../sass/partials/_forms.scss */
+/* line 39, ../sass/partials/_forms.scss */
 input[type="radio"],
 input[type="checkbox"] {
   margin: 4px 0 0;
@@ -2986,13 +2980,13 @@ input[type="range"] {
   width: 100%;
 }
 
-/* line 59, ../sass/partials/_forms.scss */
+/* line 58, ../sass/partials/_forms.scss */
 select[multiple],
 select[size] {
   height: auto;
 }
 
-/* line 66, ../sass/partials/_forms.scss */
+/* line 64, ../sass/partials/_forms.scss */
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
@@ -3012,33 +3006,31 @@ output {
 
 /* line 88, ../sass/partials/_forms.scss */
 input, textarea, select {
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 /* line 93, ../sass/partials/_forms.scss */
 input:focus, textarea:focus, select:focus {
-  -webkit-box-shadow: 0px 0px 7px #aab20a;
   -moz-box-shadow: 0px 0px 7px #aab20a;
+  -webkit-box-shadow: 0px 0px 7px #aab20a;
   box-shadow: 0px 0px 7px #aab20a;
   outline: none;
 }
 
 /* line 3, ../sass/partials/_base.scss */
 * {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 /* line 17, ../sass/partials/_base.scss */
 a {
-  -webkit-transition: color, 0.2s;
   -moz-transition: color, 0.2s;
   -o-transition: color, 0.2s;
+  -webkit-transition: color, 0.2s;
   transition: color, 0.2s;
   text-decoration: none;
 }
@@ -3060,10 +3052,8 @@ table {
 
 /* line 5, ../sass/partials/_molecules.scss */
 .card {
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
   border: 1px solid #e7e7e7;
 }
@@ -3080,10 +3070,8 @@ table {
 
 /* line 51, ../sass/partials/_molecules.scss */
 .search-bar {
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
 }
 /* line 55, ../sass/partials/_molecules.scss */
@@ -3098,10 +3086,8 @@ table {
 }
 /* line 61, ../sass/partials/_molecules.scss */
 .search-bar .search-field {
-  -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
 }
 /* line 68, ../sass/partials/_molecules.scss */
