--- a/css/style.css
+++ b/css/style.css
@@ -295,12 +295,17 @@ select {
   border: 1px solid #aaa;
 }
 
-/* line 105, ../sass/partials/_utility.scss */
+/* line 100, ../sass/partials/_utility.scss */
+.border-transparent, button, .button {
+  border: 1px solid transparent;
+}
+
+/* line 106, ../sass/partials/_utility.scss */
 .background-blue, button, .button, .search-bar {
   background: #0076be;
 }
 
-/* line 107, ../sass/partials/_utility.scss */
+/* line 108, ../sass/partials/_utility.scss */
 .background-red,
 .background-error,
 button.error,
@@ -308,7 +313,7 @@ button.error,
   background: #d51f36;
 }
 
-/* line 110, ../sass/partials/_utility.scss */
+/* line 111, ../sass/partials/_utility.scss */
 .background-orange,
 .background-warning,
 button.warning,
@@ -316,7 +321,7 @@ button.warning,
   background: #ed7612;
 }
 
-/* line 113, ../sass/partials/_utility.scss */
+/* line 114, ../sass/partials/_utility.scss */
 .background-green,
 .background-success,
 button.success,
@@ -324,22 +329,22 @@ button.success,
   background: #aab20a;
 }
 
-/* line 116, ../sass/partials/_utility.scss */
+/* line 117, ../sass/partials/_utility.scss */
 .background-yellow {
   background: #f2b520;
 }
 
-/* line 118, ../sass/partials/_utility.scss */
+/* line 119, ../sass/partials/_utility.scss */
 .background-purple {
   background: #86277f;
 }
 
-/* line 120, ../sass/partials/_utility.scss */
+/* line 121, ../sass/partials/_utility.scss */
 .background-white, button.white, .button.white, button.white:hover, button.white:focus, .button.white:hover, .button.white:focus, html, body, .search-bar .search-field {
   background: #fff;
 }
 
-/* line 122, ../sass/partials/_utility.scss */
+/* line 123, ../sass/partials/_utility.scss */
 .background-platinum,
 .background-subtle,
 hr,
@@ -352,7 +357,7 @@ hr,
   background: #e7e7e7;
 }
 
-/* line 125, ../sass/partials/_utility.scss */
+/* line 126, ../sass/partials/_utility.scss */
 .background-ash,
 .background-disabled,
 button.disabled,
@@ -360,7 +365,7 @@ button.disabled,
   background: #aaa;
 }
 
-/* line 128, ../sass/partials/_utility.scss */
+/* line 129, ../sass/partials/_utility.scss */
 .background-darkgray,
 .background-neutral,
 button.neutral,
@@ -369,57 +374,57 @@ button.neutral,
   background: #333333;
 }
 
-/* line 137, ../sass/partials/_utility.scss */
+/* line 138, ../sass/partials/_utility.scss */
 .text-blue, a {
   color: #0076be;
 }
 
-/* line 139, ../sass/partials/_utility.scss */
+/* line 140, ../sass/partials/_utility.scss */
 .text-red, .card-body.item .item-price,
 .text-error {
   color: #d51f36;
 }
 
-/* line 142, ../sass/partials/_utility.scss */
+/* line 143, ../sass/partials/_utility.scss */
 .text-orange,
 .text-warning {
   color: #ed7612;
 }
 
-/* line 145, ../sass/partials/_utility.scss */
+/* line 146, ../sass/partials/_utility.scss */
 .text-green,
 .text-success {
   color: #aab20a;
 }
 
-/* line 148, ../sass/partials/_utility.scss */
+/* line 149, ../sass/partials/_utility.scss */
 .text-yellow {
   color: #f2b520;
 }
 
-/* line 150, ../sass/partials/_utility.scss */
+/* line 151, ../sass/partials/_utility.scss */
 .text-purple {
   color: #86277f;
 }
 
-/* line 152, ../sass/partials/_utility.scss */
+/* line 153, ../sass/partials/_utility.scss */
 .text-white, button, .button, button:hover, button:focus, .button:hover, .button:focus, a.white, .card .card-header {
   color: #fff;
 }
 
-/* line 154, ../sass/partials/_utility.scss */
+/* line 155, ../sass/partials/_utility.scss */
 .text-platinum,
 .text-subtle {
   color: #e7e7e7;
 }
 
-/* line 157, ../sass/partials/_utility.scss */
+/* line 158, ../sass/partials/_utility.scss */
 .text-ash, .card-body.item .item-details, .table-data .data-set .label,
 .text-disabled {
   color: #aaa;
 }
 
-/* line 160, ../sass/partials/_utility.scss */
+/* line 161, ../sass/partials/_utility.scss */
 .text-darkgray,
 .text-neutral,
 body,
@@ -438,17 +443,17 @@ button.white:focus,
   color: #333333;
 }
 
-/* line 169, ../sass/partials/_utility.scss */
+/* line 170, ../sass/partials/_utility.scss */
 .overflow-hidden, .card {
   overflow: hidden;
 }
 
-/* line 170, ../sass/partials/_utility.scss */
+/* line 171, ../sass/partials/_utility.scss */
 .overflow-scroll-x {
   overflow-x: scroll;
 }
 
-/* line 171, ../sass/partials/_utility.scss */
+/* line 172, ../sass/partials/_utility.scss */
 .overflow-scroll-y {
   overflow-y: scroll;
 }
@@ -2824,57 +2829,58 @@ button, .button {
   -o-transition: background, 0.2s;
   -webkit-transition: background, 0.2s;
   transition: background, 0.2s;
+  font-size: 16px;
   cursor: pointer;
 }
-/* line 23, ../sass/partials/_atoms.scss */
+/* line 25, ../sass/partials/_atoms.scss */
 button.tiny, .button.tiny {
   font-size: 80%;
 }
-/* line 35, ../sass/partials/_atoms.scss */
+/* line 37, ../sass/partials/_atoms.scss */
 button:hover, button:focus, .button:hover, .button:focus {
   background: #148ad2;
 }
-/* line 42, ../sass/partials/_atoms.scss */
+/* line 44, ../sass/partials/_atoms.scss */
 button.error:hover, button.error:focus, .button.error:hover, .button.error:focus {
   background: #e9334a;
 }
-/* line 47, ../sass/partials/_atoms.scss */
+/* line 49, ../sass/partials/_atoms.scss */
 button.warning:hover, button.warning:focus, .button.warning:hover, .button.warning:focus {
   background: #ff8a26;
 }
-/* line 52, ../sass/partials/_atoms.scss */
+/* line 54, ../sass/partials/_atoms.scss */
 button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
   background: #bec61e;
 }
-/* line 57, ../sass/partials/_atoms.scss */
+/* line 59, ../sass/partials/_atoms.scss */
 button.neutral:hover, button.neutral:focus, .button.neutral:hover, .button.neutral:focus {
   background: #474747;
 }
-/* line 60, ../sass/partials/_atoms.scss */
+/* line 62, ../sass/partials/_atoms.scss */
 button.disabled, .button.disabled {
   cursor: default;
 }
-/* line 66, ../sass/partials/_atoms.scss */
+/* line 68, ../sass/partials/_atoms.scss */
 button.white, .button.white {
   border: 1px solid #aaa;
 }
-/* line 70, ../sass/partials/_atoms.scss */
+/* line 72, ../sass/partials/_atoms.scss */
 button.white:hover, button.white:focus, .button.white:hover, .button.white:focus {
   border: 1px solid #333333;
 }
 
-/* line 84, ../sass/partials/_atoms.scss */
+/* line 86, ../sass/partials/_atoms.scss */
 .button-group {
   padding: 10px 0;
 }
-/* line 86, ../sass/partials/_atoms.scss */
+/* line 88, ../sass/partials/_atoms.scss */
 .button-group button, .button-group .button {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
   margin-right: -6px;
 }
-/* line 89, ../sass/partials/_atoms.scss */
+/* line 91, ../sass/partials/_atoms.scss */
 .button-group button:first-child, .button-group .button:first-child {
   -moz-border-radius-topleft: 3px;
   -webkit-border-top-left-radius: 3px;
@@ -2883,7 +2889,7 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   -webkit-border-bottom-left-radius: 3px;
   border-bottom-left-radius: 3px;
 }
-/* line 90, ../sass/partials/_atoms.scss */
+/* line 92, ../sass/partials/_atoms.scss */
 .button-group button:last-child, .button-group .button:last-child {
   -moz-border-radius-topright: 3px;
   -webkit-border-top-right-radius: 3px;
@@ -2892,17 +2898,17 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   -webkit-border-bottom-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
-/* line 91, ../sass/partials/_atoms.scss */
+/* line 93, ../sass/partials/_atoms.scss */
 .button-group button.white:hover, .button-group button.white:focus, .button-group .button.white:hover, .button-group .button.white:focus {
   border-color: #aaa;
 }
 
-/* line 104, ../sass/partials/_atoms.scss */
+/* line 106, ../sass/partials/_atoms.scss */
 .dropdown {
   position: relative;
 }
 
-/* line 109, ../sass/partials/_atoms.scss */
+/* line 111, ../sass/partials/_atoms.scss */
 .dropdown-menu {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -2921,15 +2927,15 @@ button.white:hover, button.white:focus, .button.white:hover, .button.white:focus
   min-width: 140px;
   text-align: left;
 }
-/* line 124, ../sass/partials/_atoms.scss */
+/* line 126, ../sass/partials/_atoms.scss */
 .dropdown-menu a {
   border-bottom: 1px solid #e7e7e7;
 }
-/* line 131, ../sass/partials/_atoms.scss */
+/* line 133, ../sass/partials/_atoms.scss */
 .dropdown-menu a.active {
   font-weight: bold;
 }
-/* line 133, ../sass/partials/_atoms.scss */
+/* line 135, ../sass/partials/_atoms.scss */
 .dropdown-menu.small a {
   font-size: 0.8rem;
 }
@@ -3037,7 +3043,33 @@ select:focus {
   outline: none;
 }
 
-/* line 102, ../sass/partials/_forms.scss */
+/* line 99, ../sass/partials/_forms.scss */
+.select-label {
+  position: relative;
+  width: 100%;
+}
+
+/* line 103, ../sass/partials/_forms.scss */
+.select-label:after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 6px 6px 0 6px;
+  border-color: #000000 transparent transparent transparent;
+  position: absolute;
+  right: 10px;
+  top: 40%;
+}
+
+/* line 114, ../sass/partials/_forms.scss */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+/* line 122, ../sass/partials/_forms.scss */
 form > div {
   clear: both;
   overflow: hidden;
@@ -3045,12 +3077,12 @@ form > div {
   margin: 0 0 10px 0;
 }
 
-/* line 108, ../sass/partials/_forms.scss */
+/* line 128, ../sass/partials/_forms.scss */
 form > div > fieldset > div > div {
   margin: 0 0 5px 0;
 }
 
-/* line 111, ../sass/partials/_forms.scss */
+/* line 131, ../sass/partials/_forms.scss */
 form > div > label,
 legend {
   width: 25%;
@@ -3058,25 +3090,25 @@ legend {
   padding-right: 10px;
 }
 
-/* line 117, ../sass/partials/_forms.scss */
+/* line 137, ../sass/partials/_forms.scss */
 form > div > div,
 form > div > fieldset > div {
   width: 75%;
   float: right;
 }
 
-/* line 122, ../sass/partials/_forms.scss */
+/* line 142, ../sass/partials/_forms.scss */
 form > div > fieldset label {
   font-size: 90%;
 }
 
 @media (max-width: 600px) {
-  /* line 127, ../sass/partials/_forms.scss */
+  /* line 147, ../sass/partials/_forms.scss */
   form > div {
     margin: 0 0 15px 0;
   }
 
-  /* line 130, ../sass/partials/_forms.scss */
+  /* line 150, ../sass/partials/_forms.scss */
   form > div > label,
   legend {
     width: 100%;
@@ -3084,7 +3116,7 @@ form > div > fieldset label {
     margin: 0 0 5px 0;
   }
 
-  /* line 136, ../sass/partials/_forms.scss */
+  /* line 156, ../sass/partials/_forms.scss */
   form > div > div,
   form > div > fieldset > div {
     width: 100%;
@@ -3092,7 +3124,7 @@ form > div > fieldset label {
   }
 }
 @media (min-width: 1200px) {
-  /* line 143, ../sass/partials/_forms.scss */
+  /* line 163, ../sass/partials/_forms.scss */
   form > div > label,
   legend {
     text-align: right;
