--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -96,6 +96,26 @@ select {
 		outline: none;
 	}
 }
+.select-label{
+	position:relative;
+	width:100%;
+}
+.select-label:after {
+    content:'';
+    width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 6px 6px 0 6px;
+	border-color: #000000 transparent transparent transparent;
+	position:absolute;
+	right:10px;
+	top:40%;
+}
+select{
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+}
 
 
 //Field label-input container
